--- a/color/src/color.tokens.css
+++ b/color/src/color.tokens.css
@@ -1,20 +1,11 @@
 /**
  * Do not edit directly
- * Generated on Wed, 08 Jun 2022 04:46:42 GMT
+ * Generated on Wed, 08 Jun 2022 05:10:15 GMT
  */
 
 :root {
-  --starter-core-color-primary-base: #14b8a6;
-  --starter-core-color-primary-light: #99f6e4;
-  --starter-core-color-primary-dark: #115e59;
-  --starter-core-color-secondary-base: #f97316;
-  --starter-core-color-secondary-light: #fed7aa;
-  --starter-core-color-secondary-dark: #9a3412;
-  --starter-core-color-dark-base: #171717;
-  --starter-core-color-dark-mild: #404040;
-  --starter-core-color-light-base: #fafafa;
-  --starter-core-color-light-mild: #e5e5e5;
-  --starter-semantic-color-error: #ef4444;
-  --starter-semantic-color-success: #22c55e;
-  --starter-semantic-color-info: #0ea5e9;
+  --starter-color-bg: #e7e0e0;
+  --starter-color-interaction: #0d10b5;
+  --starter-color-gray: #e7e0e0;
+  --starter-color-white: #ffffff;
 }
