chore style-dictionary output

--- a/button/src/button.tokens.css
+++ b/button/src/button.tokens.css
@@ -1,9 +1,9 @@
 /**
  * Do not edit directly
- * Generated on Wed, 08 Jun 2022 05:10:15 GMT
+ * Generated on Wed, 08 Jun 2022 05:38:09 GMT
  */
 
 :root {
-  --starter-button-color-bg: #0d10b5;
+  --starter-button-color-bg: #0da1b5;
   --starter-button-text: #ffffff;
 }
