--- a/color/src/color.tokens.css
+++ b/color/src/color.tokens.css
@@ -1,11 +1,11 @@
 /**
  * Do not edit directly
- * Generated on Wed, 08 Jun 2022 05:38:09 GMT
+ * Generated on Wed, 08 Jun 2022 05:51:28 GMT
  */
 
 :root {
   --starter-color-bg: #e7e0e0;
-  --starter-color-interaction: #0da1b5;
+  --starter-color-interaction: #b51e0d;
   --starter-color-gray: #e7e0e0;
   --starter-color-white: #ffffff;
 }
