chore style-dictionary output

--- a/color/src/color.tokens.scss
+++ b/color/src/color.tokens.scss
@@ -1,26 +1,26 @@
 
 // Do not edit directly
-// Generated on Wed, 08 Jun 2022 22:01:24 GMT
+// Generated on Wed, 08 Jun 2022 22:13:29 GMT
 
-$starter-color-white: #fcfcfb;
-$starter-color-black: #0a0b0b;
-$starter-color-primary-20: #5effcd;
-$starter-color-primary-40: #2bffbd;
-$starter-color-primary-60: #00ffb0;
-$starter-color-primary-80: #03865d;
-$starter-color-primary-100: #026445;
-$starter-color-complementary-20: #ff5e90;
-$starter-color-complementary-40: #ff2b6d;
-$starter-color-complementary-60: #ff004f;
-$starter-color-complementary-80: #e7044a;
-$starter-color-complementary-100: #660020;
-$starter-color-breaking-20: #e12d05;
-$starter-color-breaking-40: #6b1400;
-$starter-color-warning-20: #ffc74d;
-$starter-color-warning-40: #9a6c09;
-$starter-color-info-20: #0c8bb0;
-$starter-color-info-40: #014f79;
-$starter-color-lightgreen: #e1ffcc;
-$starter-color-softgreen: #bbffaa;
-$starter-color-coldgray: #3c5764;
-$starter-color-neutralgray: #404040;
+$tudn-color-white: #fcfcfb;
+$tudn-color-black: #0a0b0b;
+$tudn-color-primary-20: #5effcd;
+$tudn-color-primary-40: #2bffbd;
+$tudn-color-primary-60: #00ffb0;
+$tudn-color-primary-80: #03865d;
+$tudn-color-primary-100: #026445;
+$tudn-color-complementary-20: #ff5e90;
+$tudn-color-complementary-40: #ff2b6d;
+$tudn-color-complementary-60: #ff004f;
+$tudn-color-complementary-80: #e7044a;
+$tudn-color-complementary-100: #660020;
+$tudn-color-breaking-20: #e12d05;
+$tudn-color-breaking-40: #6b1400;
+$tudn-color-warning-20: #ffc74d;
+$tudn-color-warning-40: #9a6c09;
+$tudn-color-info-20: #0c8bb0;
+$tudn-color-info-40: #014f79;
+$tudn-color-lightgreen: #e1ffcc;
+$tudn-color-softgreen: #bbffaa;
+$tudn-color-coldgray: #3c5764;
+$tudn-color-neutralgray: #404040;
