chore style-dictionary output

--- a/color/src/color.tokens.scss
+++ b/color/src/color.tokens.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Thu, 09 Jun 2022 17:13:03 GMT
+// Generated on Thu, 09 Jun 2022 17:18:02 GMT
 
 $tudn-color-white: #fcfcfb;
-$tudn-color-black: #000000;
+$tudn-color-black: #0a0b0b;
 $tudn-color-primary-20: #5effcd;
 $tudn-color-primary-40: #2bffbd;
 $tudn-color-primary-60: #00ffb0;
