--- a/color/src/color.tokens.css
+++ b/color/src/color.tokens.css
@@ -1,10 +1,10 @@
 /**
  * Do not edit directly
- * Generated on Fri, 17 Jun 2022 00:11:08 GMT
+ * Generated on Wed, 22 Jun 2022 16:16:42 GMT
  */
 
 :root {
-  --tudn-color-white: #fcfcfb;
+  --tudn-color-desert-storm: #fcfcfb;
   --tudn-color-black: #0a0b0b;
   --tudn-color-primary-20: #5effcd;
   --tudn-color-primary-40: #2bffbd;
