chore style-dictionary output

--- a/space/src/space.tokens.scss
+++ b/space/src/space.tokens.scss
@@ -1,11 +1,11 @@
 
 // Do not edit directly
-// Generated on Thu, 23 Jun 2022 18:17:32 GMT
+// Generated on Thu, 23 Jun 2022 18:22:31 GMT
 
-$tudn-space-xxsmall: 8;
-$tudn-space-xsmall: 16;
-$tudn-space-medium: 32;
-$tudn-space-large: 40;
-$tudn-space-xlarge: 48;
-$tudn-space-xxlarge: 56;
-$tudn-space-xxxlarge: 64;
+$space-xxsmall: 8;
+$space-xsmall: 16;
+$space-medium: 32;
+$space-large: 40;
+$space-xlarge: 48;
+$space-xxlarge: 56;
+$space-xxxlarge: 64;
